added basic structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Bel's Restaurant</title>
 </head>
 <body>
-    
-</body>
+    <header>
+        <nav>     
+            <div id="nav-buttons">
+                <button>Home</button>
+                <button>Menu</button>
+                <button>About</button>
+            </div>
+        </nav>
+    </header>
+    <div id="content"></div>
+<script defer src="main.js"></script></body>
 </html>
